2006-08-15  Zack Weinberg  <zackw@panix.com>

	* configure.ac: Delete MTN_POPT_DEPENDENCIES.  Add strptime to
	main AC_CHECK_FUNCS list (this is the only thing that
	MTN_POPT_DEPENDENCIES checked for, that was used outside popt).
	Also add lrint to this list.  Delete AC_SEARCH_LIBS for libdl.
	* lua/luaconf.h: Include config.h. Set LUA_USE_POSIX if _WIN32 is
	not defined.  Add versions of lua_number2int and lua_number2integer
	that use the C99 lrint() function; remove the unreliable union hack.
	At end of file, forcibly undefine all LUA_DL_* macros to ensure
	that lualib.cc uses the stub implementation.
	* m4/popt.m4: Delete file.
	* m4/boost.m4: Create a new macro to factor out code in common
	among most of the MTN_BOOST_LIB_* macros.
	* options.hh: Fix typo.

2006-08-15  Timothy Brownawell  <tbrownaw@gmail.com>

	* options.hh: Have a non-template option_base class to allow for...
	* cmd.hh (command_opts): Keep a set of option_base*, not
	shared_ptr<option_description>. This is to avoid problems with global
	object initialization order. Also provide a function to convert a
	command_opts to an options_description.
	* commands.cc commands.hh monotone.cc: Adjust accordingly.

2006-08-15  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* monotone.cc: work around some boost/stlport4 interaction
	by explicitely keeping NULL out of shared_ptrs

2006-08-15  Matthew Gregan  <kinetik@orcon.net.nz>

	* lua/*.c: Lua 5.1 supports raising exceptions using C++ exception
	handling mechanisms.  Rename to *.cc so that automake compiles
	with the C++ compiler.  Yes, this is lame, unless an automake guru
	has a better way...
	* lua.hh, lua_hooks.cc, tester.cc: Remove 'extern "C"' from around
	the Lua includes (also change the includes from <> to "" since
	we're using a local copy of Lua).
	* Makefile.am: Update for renamed Lua files.
	* Makefile.am: Post-merge cleanup.
	* luaext_mkstemp.cc: Slightly cleaner way to create a Lua IO
	object from a FILE*.