@@ -22,25 +22,25 @@ check(mtn("ci", "--exclude", ".", "-m", 'x'), 1, false, false)
 -- check(echo a >>file1)
 
 check(mtn("ci", "--exclude", "foo", "-m", 'x'), 0, false, false)
-check(mtn("status", "--brief"), 0, true)
+check(mtn("status"), 0, true)
 check(qgrep("foo/bar", "stdout"))
 check(not qgrep("file1", "stdout"))
 append("file1", "a")
 
 check(mtn("ci", ".", "--exclude", "file1", "-m", 'x'), 0, false, false)
-check(mtn("status", "--brief"), 0, true)
+check(mtn("status"), 0, true)
 check(not qgrep("foo/bar", "stdout"))
 check(qgrep("file1", "stdout"))
 append("foo/bar", "b")
 
 check(mtn("ci", ".", "--exclude", "foo", "foo/bar", "-m", 'x'), 0, false, false)
-check(mtn("status", "--brief"), 0, true)
+check(mtn("status"), 0, true)
 check(not qgrep("foo/bar", "stdout"))
 check(not qgrep("file1", "stdout"))
 append("file1", "a")
 append("foo/bar", "b")
 
 check(mtn("ci", "--exclude", "foo", "foo/bar", "-m", 'x'), 0, false, false)
-check(mtn("status", "--brief"), 0, true)
+check(mtn("status"), 0, true)
 check(not qgrep("foo/bar", "stdout"))
 check(qgrep("file1", "stdout"))
