@@ -13,6 +13,6 @@ check(mtn("refresh_inodeprints"))
 append("file1", "a")
 append("foo/bar", "b")
 check(mtn("ci", "--exclude", "foo", "-m", 'x'), 0, false, false)
-check(mtn("status", "--brief"), 0, true)
+check(mtn("status"), 0, true)
 check(qgrep("foo/bar", "stdout"))
 check(not qgrep("file1", "stdout"))
